feat: enhance CORS configuration with environment variable support; update session settings for production and local environments